# snapsafe

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: CONFIG.md  DESIGN.md  PART1.md  PART2.md
src/: actions.rs  lib.rs  main.rs
src/actions/: backup.rs  config.rs  crypto.rs  crytpo.rs  delete.rs  diff.rs  gc.rs  mod.rs  registry.rs  restore.rs  snapshot.rs
src/commands/: mod.rs
src/common/: mod.rs
src/compress/: compress_engine.rs  compressor.rs  decompressor.rs  mod.rs
src/config/: configs.rs  mod.rs
src/crypto/: mod.rs  password.rs
src/registry/: mod.rs
src/utils/: config.rs  config_utils.rs  error.rs  gc.rs  layout.rs  mod.rs  registry.rs  snapshot.rs
tests/: cli_tests.rs  enforcement_test.rs  gc_tests.rs  restore.rs
tests/common/: mod.rs
