[package]
name = "snapsafe"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
datetime = "0.5.2"
password-hash = "0.5.0"
rand = "0.9.1"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
