[package]
name = "snapsafe"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
brotli2 = "0.3.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
datetime = "0.5.2"
dirs = "6.0.0"
flate2 = "1.1.2"
hex = "0.4.3"
password-hash = "0.5.0"
rand = "0.9.1"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
